# SemanticFS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PRD.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: indexing.rs
crates/semfs-cli/: Cargo.toml
crates/semfs-cli/src/: config.rs  main.rs
crates/semfs-cli/src/commands/: config_cmd.rs  diagnose.rs  index.rs  mod.rs  mount.rs  search.rs  status.rs  unmount.rs
crates/semfs-core/: Cargo.toml
crates/semfs-core/src/: error.rs  lib.rs
crates/semfs-core/src/indexer/: crawler.rs  mod.rs  pipeline.rs
crates/semfs-core/src/indexer/chunker/: code.rs  mod.rs  text.rs  traits.rs
crates/semfs-core/src/query/: filter.rs  mod.rs  parser.rs  types.rs
crates/semfs-core/src/retriever/: hybrid.rs  keyword.rs  mod.rs  rrf.rs  semantic.rs
crates/semfs-core/src/vfs/: mapper.rs  mod.rs  write_ops.rs
crates/semfs-embed/: Cargo.toml
crates/semfs-embed/src/: error.rs  lib.rs  noop.rs  ollama.rs  onnx.rs  traits.rs
crates/semfs-fuse/: Cargo.toml
crates/semfs-fuse/src/: error.rs  filesystem.rs  lib.rs  linux.rs  macos.rs  provider.rs  windows.rs
crates/semfs-storage/: Cargo.toml
crates/semfs-storage/src/: cache.rs  error.rs  lance.rs  lib.rs  sqlite.rs  types.rs  wal.rs
crates/semfs-watch/: Cargo.toml
crates/semfs-watch/src/: debounce.rs  error.rs  events.rs  lib.rs  watcher.rs
docs/specs/: 2026-03-30-semanticfs-design.md  completion-audit.md
scripts/: install.sh  setup-dev.sh
tests/: integration_test.rs
