[package]
name = "semfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for SemanticFS: query parsing, retrieval, indexing, and VFS mapping"

[dependencies]
semfs-storage = { path = "../semfs-storage" }
semfs-embed = { path = "../semfs-embed" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-kotlin = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
