[package]
name = "semfs-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedding abstraction for SemanticFS: Ollama and ONNX providers"

[features]
default = ["ollama"]
ollama = ["reqwest"]
onnx = []

[dependencies]
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
