[package]
name = "semfs-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage layer for SemanticFS: SQLite, LanceDB, WAL, and caching"

[dependencies]
rusqlite = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
