[package]
name = "semfs-watch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File system watcher for SemanticFS with debouncing and batch processing"

[dependencies]
notify = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
